:bug: header z-index

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -251,7 +251,7 @@
 }
 
 
-@media (max-width: 1210px){
+@media (max-width: $desktop-large){
     .header{
         .wrapper-logo{
             width: 150px;
@@ -281,6 +281,7 @@
 
 @media (max-width: $desktop-small){
     .header{
+        z-index: auto;
         &.deployed{
             .container-menu-head, .container-menu-main{
                 transform: translate(0, 0);
